# ftransposepp

./: CMakeLists.txt
src/: ftrq.cpp
src/ftr/: context.h  database.h  ftrponder.h  query.h
src/ftrq/: command.h  command_executor.h  command_list.h  command_reader.h  context.h  debug.h  query.h  tokenizer.h
src/ftrq/commands/: list.h
src/ftrq/model/: file_mapping.h
test/: CMakeLists.txt  initialize.sh
test/ftr/: database.cpp  input.sh  query.cpp  tests_are_in.cpp
